--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/BattagliaNavale/build/
-/BattagliaNavale/dist/
-/BattagliaNavale/nbproject/private/
+/JavaHTTPServer/build/
+/JavaHTTPServer/dist/
+/JavaHTTPServer/nbproject/private/
 
 *.class
